# gslide-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
appscript/: cross_deck_copy.gs
docs/: appscript-setup.md  oauth-setup.md  template-library.md
examples/: template_library_workflow.md
src/gslides_mcp/: __init__.py  app.py  auth.py  server.py  util.py
src/gslides_mcp/tools/: __init__.py  assets.py  content.py  cross_deck.py  deck.py  layout.py  library.py  qa.py  semantic.py  shapes.py  slides.py
